# gnomad-constraint

./: .Rprofile  .gitignore  .lintr  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  MANIFEST.in  README.md  constraint_test_dd_obs_exp.py  full_gene_uniprot_ids.txt  pyproject.toml  requirements-dev.in  requirements-dev.txt  tm_gene_ids.txt
.github/workflows/: ci.yml
constraint/: constraint_pipeline.py
gnomad-constraint/constraint/: constraint_pipeline.py
gnomad_constraint/constraint/: constraint_pipeline.py
gnomad_constraint/experimental/proemis3d/: README.md  README_FILTERING_AND_MODELS.md  README_FORWARD_ALGORITHM.md  README_GAMMA_UDF.md  compare_forward_methods_report.py  constants.py  create_gene_mapping.py  create_proemis3d_viewer_ht.py  create_test_data.py  data_import.py  debug_utils.py  example_forward_runs_config.yaml  forward_method_recommendation.md  forward_methods_report.csv  forward_methods_report.md  forward_runs_144_genes.yaml  full_forward_runs.yaml  proemis_3d.py  resources.py  test_dataproc_gamma.py  test_with_test_data.py  utils.py  visualize_gene_methods.py
gnomad_constraint/experimental/promis3d/: GammaUDF.scala  README_GAMMA_UDF.md  build.sbt  compile_udf.sh  constants.py  data_import.py  final_success_test.py  proemis_3d.py  (+4 more)
gnomad_constraint/pipeline/: constraint_pipeline.py  constraint_pipeline_complex.py  gene_lof_matrix.py  summary_statistics.py
gnomad_constraint/plots/: README.md  README.txt  README_SFS.md  compare_genetics_gym_percentiles.ipynb  compute_sfs_tables.py  config.R  determine_missense_score_percentiles.py  generate_constraint_plots.R  loading_functions.R  plot_matched_plof.py  plotting_functions.R  plotting_utils.R  utils.R
gnomad_constraint/resources/: constants.py  resource_utils.py
gnomad_constraint/utils/: constraint.py  constraint_basics.py  constraint_complex.py  generic.py
proemis3d_enrichment_plots/: generate_tm_report_plots.py  matched_plof_detailed_numbers.md  matched_plof_oe_analysis.md  method_enrichment_results.csv  transmembrane_constraint_report.md
release_readme/: gene_constraint_ht_README.md  mutation_rate_ht_README.md
utils/: __init__.py  constraint_basics.py  generic.py
(+5 files in other folders)
