[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gnomad-constraint"
version = "0.1.0"
description = "GnomAD constraint analysis tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "hail",
    "numpy",
    "pandas",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
    "pydocstyle",
    "autopep8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gnomad_constraint*"]
exclude = ["renv*", "venv*", ".git*", ".github*", ".vscode*", ".idea*", ".Rproj*", ".R*"]

[tool.pydocstyle]
convention = "pep257"
match = ".*\\.py"
add_ignore = [
  "D100", # Do not require docstrings for modules.
  "D104", # Do not require docstrings for packages (in __init__.py).
]

[tool.pylint.messages_control]
disable = [
  # Ignore refactor and convention categories
  "R",
  "C",
  # Allow todo/fixme comments
  "fixme",
  # Warnings
  "cell-var-from-loop",
  "dangerous-default-value",
  "invalid-unary-operand-type",
  "pointless-string-statement",
  "protected-access",
  "redefined-outer-name",
  "unspecified-encoding",
  "unused-variable",
]

[tool.black]
target-version = ['py36', 'py37', 'py38']
preview = true

[tool.isort]
profile = "black"

[tool.autopep8]
# Use same max line length as the default in Black - 88
max_line_length = 88
# Ignore errors that conflict with Black
# E201 - whitespace after '('
# E202 - whitespace before ')'
# E203 - whitespace before ':'
# Ignore E731 - do not assign a lambda expression, use a def
ignore = ['E201', 'E202', 'E203', 'E731']
recursive = true
aggressive = 1
